# payjp-rust-sdk

./: .gitignore  Cargo.toml  LICENSE  PR_DESCRIPTION.md  README.ja.md  README.md  create_test_token.sh  create_token.html
examples/: charge_with_token.rs  create_charge.rs  create_customer.rs  create_token_public.rs  subscription.rs  three_d_secure.rs
src/: client.rs  error.rs  lib.rs
src/params/: mod.rs
src/resources/: account.rs  balance.rs  card.rs  charge.rs  customer.rs  event.rs  mod.rs  plan.rs  statement.rs  subscription.rs  term.rs  three_d_secure.rs  token.rs  transfer.rs
src/resources/platform/: mod.rs  tenant.rs  tenant_transfer.rs
src/response/: list.rs  mod.rs
