[package]
name = "payjp"
version = "0.1.0"
edition = "2021"
authors = ["PAY.JP Rust SDK Contributors"]
description = "Rust SDK for PAY.JP payment platform"
license = "MIT"
repository = "https://github.com/penguin425/payjp-rust-sdk"
keywords = ["payjp", "payment", "api", "sdk"]
categories = ["api-bindings"]
readme = "README.md"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
url = "2.5"
base64 = "0.22"
rand = "0.9"

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.6"

[lib]
name = "payjp"
path = "src/lib.rs"

[[example]]
name = "create_charge"
path = "examples/create_charge.rs"

[[example]]
name = "create_customer"
path = "examples/create_customer.rs"

[[example]]
name = "subscription"
path = "examples/subscription.rs"

[[example]]
name = "three_d_secure"
path = "examples/three_d_secure.rs"
